# AdkTelemetry

./: .gitignore  README.md  pyproject.toml
adktelemetry/: __init__.py  agentelemetry.py  agentfirestore.py  autoagent.py  config.py  context.py  exceptions.py  finops.py  gemini_pricing.yaml  hooks.py  live_notify.py  patch_cli.py  registry.py  runtime.py  server.py  sse_telemetry.py  store.py  tools.py
adktelemetry/adk/: __init__.py  loader_patch.py
adktelemetry/firestore/: __init__.py  client.py  config.py  session_service.py  telemetry_writer.py
oraicle/: __init__.py  autoagent.py  context.py  exceptions.py  registry.py  runtime.py  tools.py
oraicle/adk/: agent_wrapper.py  loader_patch.py
tests/: test_adk_compat.py  test_agentelemetry.py  test_autoagent.py  test_dashboard_http_and_imports.py  test_error_breakdown.py  test_error_inference.py  test_event_error_scan.py  test_finops.py  test_firestore_default_mode.py  test_firestore_key_sanitization.py  test_firestore_live_integration.py  test_firestore_mirror_and_swap.py  test_registry.py  test_runner_failure_telemetry.py  test_session_detail.py  test_snapshot_filtered.py  test_sse_error_capture.py  test_sse_route_patch.py  test_telemetry_store_both_modes.py
