[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oraicle"
version = "2.0.0"
description = "Oraicle-Agent — Turn any Google-ADK Agent into a root_agent dynamically."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Zack Mariano", email = "zack.cmariano@oraicle.ai" }
]
keywords = [
  "google-adk",
  "agent",
  "ai-agents",
  "vertex-ai",
  "multi-agent",
  "a2a"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.10"

dependencies = [
  "google-adk>=1.16.0"
]

[project.urls]
Homepage = "https://github.com/zackcmariano/oraicle-agent"
Documentation = "https://github.com/zackcmariano/oraicle-agent"
Issues = "https://github.com/zackcmariano/oraicle-agent/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["oraicle*"]
