[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adktelemetry"
version = "0.1.0"
description = "Library for Google ADK focused on observability, telemetry, session tracing, and operational cost analysis for AI agents."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Zack Mariano", email = "zack.cmariano@oraicle.ai" }
]
keywords = [
  "google-adk",
  "adk",
  "telemetry",
  "observability",
  "ai-agents",
  "agent-observability",
  "session-tracing",
  "finops",
  "llm-monitoring",
  "multi-agent"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: System :: Monitoring"
]
requires-python = ">=3.10"

dependencies = [
  # ADK runtime (Runner, Event, dev server hooks).
  "google-adk>=1.23.0",
  # Declared because adktelemetry imports it directly (dashboard + snapshot/stream APIs).
  "fastapi>=0.115.0",
  # Declared because adktelemetry.sse_telemetry imports StreamingResponse from Starlette.
  "starlette>=0.40.0",
  # FinOps catalog (gemini_pricing.yaml).
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.package-data]
adktelemetry = ["gemini_pricing.yaml"]

[project.urls]
Homepage = "https://github.com/zackcmariano/AdkTelemetry"
Documentation = "https://github.com/zackcmariano/AdkTelemetry"
Repository = "https://github.com/zackcmariano/AdkTelemetry"
Issues = "https://github.com/zackcmariano/AdkTelemetry/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["adktelemetry*"]